--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bokor&family=Dancing+Script:wght@400..700&display=swap');
 *,
 html,body {
     margin: 0;
@@ -21,7 +22,11 @@ html,body {
     font-family: sans-serif;
     text-align: center;
     height: 10vh;
-    font-family: "Dancing Script", cursive;
+    font-family: "Bokor", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size:70px;
+    color:#1e2123;
 
 
 
