--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Bokor&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Bokor&family=Dancing+Script:wght@400..700&display=swap');
 *,
 html,body {
     margin: 0;
