--- a/style.css
+++ b/style.css
@@ -18,13 +18,31 @@ html,body {
 
 }
 
+/* Untuk ukuran layar lebih kecil dari 600px */
+@media (max-width: 70px) {
+    .title {
+        margin-top: 10px; /* Mengurangi margin atas agar tidak bertumpuk */
+        padding: 10px;
+    }
+
+    .title-content {
+        font-size: 40px; /* Mengurangi ukuran font judul agar sesuai layar kecil */
+    }
+
+    .root {
+        padding-top: 20px; /* Menambahkan jarak pada root agar elemen input lebih ke bawah */
+    }
+}
+
+
 .title-content{
+    font-family: sans-serif;
     text-align: center;
     height: 10vh;
     font-family: "Bokor", system-ui;
     font-weight: 400;
     font-style: normal;
-    font-size:70px;
+    font-size:60px;
     color:#1e2123;
 
 
@@ -85,7 +103,10 @@ html,body {
 }
 
 #loginButton,
-#logoutButton {
+#logoutButton,
+#registerButton,
+#registerSubmitButton,
+#cancelSubmitButton {
     background-color: #59c1db; 
     color: white; 
     border: none; 
@@ -99,13 +120,19 @@ html,body {
 }
 
 #loginButton:hover,
-#logoutButton:hover {
+#logoutButton:hover,
+#registerButton:hover,
+#registerSubmitButton:hover,
+#cancelSubmitButton {
     background-color: #2a7c6d; 
     transform: scale(1.05); 
 }
 
 #loginButton:active,
-#logoutButton:active {
+#logoutButton:active,
+#registerButton:active,
+#registerSubmitButton:active,
+#cancelSubmitButton {
     background-color: #64c9cc; 
     transform: scale(0.98); 
 }
@@ -135,3 +162,17 @@ html,body {
     box-shadow: 0px 0px 8px rgba(98, 0, 234, 0.5); 
     background-color: #fff; 
 }
+
+.button-group {
+    display: flex-wrap; /* Membuat tombol dalam satu baris */
+    gap: 10px; /* Memberikan jarak antar tombol */
+    justify-content: center; /* Pusatkan tombol dalam container */
+    align-items: center; /* Selaraskan tombol secara vertikal */
+    flex-wrap: nowrap; /* Pastikan tombol tidak pindah ke baris berikutnya */
+  }
+  
+  .button-group button {
+    flex: none; /* Pastikan tombol tidak melar */
+    display:inline-flex;
+  }
+  
